--- a/futureEVChronJobs/conf/reference.yml
+++ b/futureEVChronJobs/conf/reference.yml
@@ -6,28 +6,30 @@ salt: "our salt to beused"
 encryptionkey: "mdshortsencryptionkeysss" #must be 16 24  or 32 for aes128 aes192 or aes256 respectively 
 tokensecret: "tokensecret"
 mongodb:
-  host: "cluster0.vztvmkb.mongodb.net"
+  host: "mongodbHostUrk"
   db: "mongodb+srv"
-  username: "nsinghi2011"
-  password: "LeOvTKC2tkgydYja"
-  dbname: "Cluster0"
+  username: "admin"
+  password: "password"
+  dbname: "FutureEV"
   usercollectionname: "users"
   tokensecret: "AAAAAAAAAAA"
 twilio:
-  sid: "ACddbaa9736e3bc4afad330edade11661e"
-  token: "3ad3ddff23e453c8326999558848f285"
-  service: "VAc2723126498d3d26dacc4d6b03511d3c"
+  sid: "twiliosid"
+  token: "twiliotoken"
+  service: "twilioservice"
 pullapi:
-  username: "9312237612"
+  username: "futureevagra"
   password: "Abc@1234"
+  baseurlauth: "https://api-track-py.roadcast.co.in/api/v1/auth/"
+  baseurl: "https://api-track-py.roadcast.co.in/api/v1/"
 aws:
-  aws_access_key_id: "AKIA2XFNEFXY4KBCE6GJ"
-  aws_secret_access_key: "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"
+  aws_access_key_id: "access key id not req"
+  aws_secret_access_key: "access key not req"
   region: "ap-south-1"
 email:
-  from: "nsinghi2011@gmail.com"
+  from: "email"
 firebase:
-  jsonpath: "./futureevdemo-firebase-adminsdk-j5evk-a5eaec3eac.json"
+  jsonpath: "path_to_firebase_service_file"
 motoapi:
   url: "https://prod-evapi-web.connectm.com"
   urlapp: "https://prod-evapi-app.connectm.com"
@@ -35,3 +37,6 @@ motoapi:
   userPoolId: "us-east-1_XtSzTbktc"
   password: "FutureEV@123"
   appcode: "1720091910"
+razorpay:
+  key: "rzrPay_Key"
+  secret: "rzrPay_secret"
